# trost

./: CMakeLists.txt  README.md
cmake/: m68k-amigaos-gcc10.cmake
src/: App.cpp  App.h  CMakeLists.txt  Flags.h  Function.h  Graphics.h  Input.cpp  Input.h  Messages.cpp  Messages.h  Rect.h  Renderer.cpp  Renderer.h  Vector.h  main.cpp
src/db/: DB.cpp  DB.h
src/util/: SharedPtr.h  String.cpp  String.h  Vector.h
